fixed sidebar gap

--- a/style.css
+++ b/style.css
@@ -435,7 +435,7 @@ a {
 
 .sidebar_footer_container {
   display: flex;
-  padding: 243px 0px 0px 52px;
+  padding: 0px 0px 0px 52px;
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
